--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
     <link href="styles/app.css" rel="stylesheet"/>
     <!-- endbuild -->
     <!-- build:css(.) styles/vendor.css -->
-    <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet"/>
-    <link href="bower_components/angularjs-toaster/toastr.css" rel="stylesheet"/>
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="bower_components/angularjs-toaster/toaster.css" rel="stylesheet"/>
     <!-- endbuild -->
 
 </head>
